--- a/sourcebans-web-theme-fluent/mails/ban_protest.html
+++ b/sourcebans-web-theme-fluent/mails/ban_protest.html
@@ -373,7 +373,7 @@
                                                             <td>{banadmin}</td>
                                                         </tr>
                                                         <tr>
-                                                            <td><strong>Message</strong>:</td>
+                                                            <td><strong>信息</strong>:</td>
                                                             <td>{message}</td>
                                                         </tr>
                                                         </tbody>
