--- a/sourcebans-web-theme-fluent/mails/ban_submission.html
+++ b/sourcebans-web-theme-fluent/mails/ban_submission.html
@@ -373,7 +373,7 @@
                                                             <td>{demo}</td>
                                                         </tr>
                                                         <tr>
-                                                            <td><strong>Server</strong>:</td>
+                                                            <td><strong>服务器</strong>:</td>
                                                             <td>{server}</td>
                                                         </tr>
                                                         <tr>
